Working on learning HTML lists

--- a/HTML/FirstPage.html
+++ b/HTML/FirstPage.html
@@ -32,6 +32,22 @@
     <li>Here is another list element right here</li>
     </ul>
 
+    <div>
+      Here is a new list, ordered this time:
+      </div>
+
+    <ol>
+      <li>Here is one list element</li>
+      <li> Here is a list within a list, getting trippy
+        <ul>
+          <li>
+            A list item for the second-order list
+            </li>
+          </ul>
+        </li>
+      <li>Here is another list element right here</li>
+      </ol>
+
 
 </body>
 </html>
