Getting over div soup: using articles, mains, sections

--- a/HTML/FirstPage.html
+++ b/HTML/FirstPage.html
@@ -1,52 +1,88 @@
 <html>
 <head>
 
-  <title></title>
+  <title>Who uses periods</title>
+
 </head>
+
 <body>
-  <div>
-    Hello, this is a div
-  </div>
-  <div>
-    This is a new div
-  </div>
+  <header height="400">
+    This is the header of my document
+  </header>
 
-  <span> This <b>is</b> an <i>inline</i> element</span>
+  <main>
 
-  <span> you?</span>
+    <section>
 
-  <p>
-    This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing.
-  </p>
-
-  <p>
-    This is a <a href = "https://www.udemy.com/course/front-end-web-development/learn/lecture/6805722#overview">oops thats a link</a> about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing.
-  </p>
-
-  <div>
-    Here is a new list:
-    </div>
-
-  <ul>
-    <li>Here is one list element</li>
-    <li>Here is another list element right here</li>
-    </ul>
-
-    <div>
-      Here is a new list, ordered this time:
+      <div>
+        Hello, this is a div, followed by some bad-practice line breaks
+      </div>
+      <br />
+      <br />
+      <br />
+      <div>
+        This is a new div
       </div>
 
-    <ol>
-      <li>Here is one list element</li>
-      <li> Here is a list within a list, getting trippy
-        <ul>
-          <li>
-            A list item for the second-order list
+      <br />
+      <br />
+      <br />
+
+      <article>
+        >This is going to be an article<
+        <p>
+          Welcome to my article. This will be about the wonderful art of writing articles.
+        </p>
+      </article>
+
+    </section>
+
+    <section>
+
+
+      <span> This <b>is</b> an <i>inline</i> element</span>
+
+      <span>, is it not?</span>
+
+      <p>
+        This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing.
+      </p>
+
+      <p>
+        This is a <a href = "https://www.udemy.com/course/front-end-web-development/learn/lecture/6805722#overview">oops thats a link</a> about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing. This is a long paragraph about nothing.
+      </p>
+
+      <div>
+        Here is a new list:
+      </div>
+
+      <ul>
+        <li>Here is one list element</li>
+        <li>Here is another list element right here</li>
+      </ul>
+
+      <div>
+        Here is a new list, ordered this time:
+      </div>
+
+      <ol>
+        <li>Here is one list element</li>
+        <li> Here is a list within a list, getting trippy
+          <ul>
+            <li>
+              A list item for the second-order list
             </li>
           </ul>
         </li>
-      <li>Here is another list element right here</li>
+        <li>Here is another list element right here</li>
       </ol>
+    </section>
+
+  </main>
+
+  <footer>
+    &copy; This is the footer of my spaceddddd &nbsp;&nbsp;&nbsp;&nbsp; document
+  </footer>
 
 
 </body>
