--- a/HTML/FirstPage.html
+++ b/HTML/FirstPage.html
@@ -6,6 +6,10 @@
 </head>
 
 <body>
+
+  <h1>That's one big heading</h1>
+
+  <h3>Coming in on second place we have...</h3>
   <header height="400">
     This is the header of my document
   </header>
@@ -38,6 +42,53 @@
     </section>
 
     <section>
+
+      <br />
+      <h4>Here is a table (which is still easier than LaTeX) with some bad inline tags. Should use CSS instead. </h4>
+
+      <table border="2px" width = "90%">
+        <thead>
+          <tr>
+            <th>
+              Column1
+            </th>
+            <th width="300">
+              Column2
+            </th>
+            <th>
+              Column3
+            </th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>
+              Row1,1
+            </td>
+            <td>
+              Row1,2
+            </td>
+            <td>
+              Row1,3
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Row2,1
+            </td>
+            <td>
+              Row2,2
+            </td>
+            <td>
+              Row2,3
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <br />
+
+
 
 
       <span> This <b>is</b> an <i>inline</i> element</span>
