--- a/HTML/MyOwnPage.html
+++ b/HTML/MyOwnPage.html
@@ -34,6 +34,7 @@
       </article>
 
       <article>
+        <img width = "50%" src = "why-is-my-dog-sticking-out-his-tongue.jpg"/>
         <h4>Is it their <a href = "#">tongues</a>?</h4>
         <p>
           People have also been complaining that these floofs are completely
