--- a/HTML/MyOwnPage.html
+++ b/HTML/MyOwnPage.html
@@ -3,8 +3,11 @@
 <html>
 
 <head>
-
   <title>Why golden retrievers are so cute</title>
+  <meta charset="utf-8">
+  <meta name="author" content="Ahsan Ahmad">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This is a webpage about golden retrievers...and other stuff."
 </head>
 
 <body>
